Fixed profiles for Java 11. Removed malfunctioning jdeps plugin.