@@ -55,7 +55,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <!-- Kotlin constants -->
-        <kotlin.version>1.2.61</kotlin.version>
+        <kotlin.version>1.2.71</kotlin.version>
         <kotlin.jvm.target>1.8</kotlin.jvm.target>
 
         <!--
@@ -76,12 +76,14 @@
 
         <maven.version>3.0</maven.version>
         <jdk.version>1.8</jdk.version>
+        <javaee-api.version>8.0</javaee-api.version>
         <validation-api.version>1.1.0.Final</validation-api.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
 
         <!-- Commonly controlled version properties -->
         <aspectj.runtime.version>1.8.13</aspectj.runtime.version>
         <aspectj-maven-plugin.version>1.11</aspectj-maven-plugin.version>
+        <jaxb-api.version>2.3.1</jaxb-api.version>
         <jaxb2-maven-plugin.version>2.3.1</jaxb2-maven-plugin.version>
         <osgi.version>6.0.0</osgi.version>
         <slf4j.version>1.7.25</slf4j.version>
@@ -190,8 +192,13 @@
             <dependency>
                 <groupId>javax</groupId>
                 <artifactId>javaee-api</artifactId>
-                <version>7.0</version>
+                <version>${javaee-api.version}</version>
                 <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>${jaxb-api.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.validation</groupId>
@@ -935,7 +942,7 @@
         <profile>
             <id>jdk9</id>
             <activation>
-                <jdk>[9,)</jdk>
+                <jdk>[9,11)</jdk>
             </activation>
 
             <build>
@@ -967,6 +974,43 @@
                                 --add-modules java.xml.bind
                                 --illegal-access=deny
                             </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+
+        </profile>
+
+        <profile>
+            <id>jdk11</id>
+            <activation>
+                <jdk>[11,)</jdk>
+            </activation>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <!--
+                                without forking compilation happens in the
+                                same process, so no arguments are applied
+                             -->
+                            <fork>true</fork>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>--illegal-access=deny</argLine>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <configuration>
+                            <argLine>--illegal-access=deny</argLine>
                         </configuration>
                     </plugin>
                 </plugins>
